tests for longrun tests